--- a/package.json
+++ b/package.json
@@ -3,15 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@elastic/datemath": "^5.0.3",
-    "@elastic/eui": "^76.4.0",
-    "@emotion/css": "^11.10.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/icons-material": "^5.11.11",
-    "@mui/joy": "^5.0.0-alpha.73",
     "@mui/material": "^5.11.15",
-    "@mui/styled-engine-sc": "^5.11.11",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,16 +13,18 @@
     "ag-grid-community": "^29.2.0",
     "ag-grid-enterprise": "^29.2.0",
     "ag-grid-react": "^29.2.0",
-    "axios": "^1.3.4",
-    "moment": "^2.29.4",
+    "mui-button": "^1.0.8",
+    "multiselect-react-dropdown": "^2.0.25",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-select-component": "^4.3.4",
+    "react-multiple-select-dropdown-lite": "^2.0.6",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-simple-multi-select": "^1.1.0",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.4",
-    "yarn": "^1.22.19"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
